--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.3",
     "semantic-ui-css": "^2.4.1",
     "web-vitals": "^1.1.0"
   },
@@ -36,6 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-  , "proxy": "http://localhost:4000"
+  },
+  "proxy": "http://localhost:4000"
 }
